Add support for the page title to be specified by starting a page with {{TITLE:example}}

--- a/Guppy/Web.config
+++ b/Guppy/Web.config
@@ -10,6 +10,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="GuppyContentDirectory" value="C:\GuppyContent" />
+    <add key="DefaultPageTitle" value="Pinta: Painting Made Simple!" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
